5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1595_2895.log
== TEST (2019-04-16 13:41:21) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float9input("Qual o valor do frete?"))

total = (var * jogos + frete
			
print (total)
-- ERROR:
File "XXXX", line 5
    frete = float9input())
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:41:26) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float9input("Qual o valor do frete?"))

total = (var * jogos + frete
			
print (total)
-- ERROR:
File "XXXX", line 5
    frete = float9input())
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:41:31) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float9input("Qual o valor do frete?")

total = (var * jogos + frete
			
print (total)
-- ERROR:
File "XXXX", line 9
    print (total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:41:37) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float9input("Qual o valor do frete?")

total = (var * jogos + frete
			
print(total)
-- ERROR:
File "XXXX", line 9
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:41:58) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float9input("Qual o valor do frete?")

total = (var * jogos + frete)
			
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    frete = float9input()
NameError: name 'float9input' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:43:22) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float(input("Qual o valor do frete?"))

total = (var * jogos + frete)
			
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:45:03) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float(input("Qual o valor do frete?"))

total = (var * jogos + frete)
			
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:45:27) 
-- CODE:
jogos = int(input("Quatidade de jogos: "))

var = float(input("Qual o valor unitário do jogo?: "))

frete = float(input("Qual o valor do frete?"))

total = (var * jogos + frete)
			
print(total)
-- EXECUTION TIME:
0.202144
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
